{
  "version": 4,
  "terraform_version": "1.4.4",
  "serial": 23,
  "lineage": "6d0bb7f1-504e-e860-63e6-0a3a5953cb01",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "test-sg-eks-cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:950104362624:security-group/sg-0ae1e3e6ed1b1d254",
            "description": "security_group for test-eks-cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "egress security_group_rule for test-eks-cluster",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ae1e3e6ed1b1d254",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ingress security_group_rule for test-eks-cluster",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "test-sg-eks-cluster",
            "name_prefix": "",
            "owner_id": "950104362624",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test-sg-eks-cluster"
            },
            "tags_all": {
              "Name": "test-sg-eks-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0730c58d9e2cdacf9"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "test-sg-eks-cluster-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "egress security_group_rule for test-eks-cluster",
            "from_port": 0,
            "id": "sgrule-1050759046",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0ae1e3e6ed1b1d254",
            "security_group_rule_id": "sgr-01cf97929dd2ab8e2",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.test-sg-eks-cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "test-sg-eks-cluster-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "ingress security_group_rule for test-eks-cluster",
            "from_port": 0,
            "id": "sgrule-2263327758",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0ae1e3e6ed1b1d254",
            "security_group_rule_id": "sgr-07bd3b13e0a09fdaa",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.test-sg-eks-cluster"
          ]
        }
      ]
    }
  ]
}